Added first implementation of pseudo, doesn't work yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,14 @@ project(SCCG)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SCCG main.cpp)
+add_executable(SCCG main.cpp
+        src/FastaParser.cpp
+        src/FastaParser.h
+        src/KmerIndex.cpp
+        src/KmerIndex.h
+        src/Utils.h
+        src/MatchFinder.cpp
+        src/MatchFinder.h
+        src/Compressor.cpp
+        src/Compressor.h
+)
