--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,4 @@ project(SCCG)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SCCG main.cpp
-        src/KmerIndex.cpp
-        src/KmerIndex.h
-        src/Utils.h
-        src/MatchFinder.cpp
-        src/MatchFinder.h
-        src/Compressor.cpp
-        src/Compressor.h
-)
+add_executable(SCCG main.cpp src/Compressor.cpp src/KmerIndex.cpp src/MatchFinder.cpp src/Position.h src/Utils.h)
