Fixed to uppercase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SCCG)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SCCG main.cpp src/Compressor.cpp src/KmerIndex.cpp src/MatchFinder.cpp src/Position.h src/Utils.h)
+add_executable(SCCG main.cpp src/Compressor.cpp src/Decompressor.cpp src/KmerIndex.cpp src/MatchFinder.cpp src/Position.h src/Utils.h)
